@@ -1,5 +1,11 @@
 2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-typify.c (pkl_typify1_ps_print_stmt): Fix
+	diagnostics.
+	* testsuite/poke.pkl/print-diag-1.pk: Update expected error.
+
+2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-typify.c (pkl_typify1_ps_format): Improve
 	diagnostics.
 	* testsuite/poke.pkl/printf-diag-18.pk: Adapt expected error.
